feat: finally card

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,7 +1,8 @@
 <a href="" class="card__container">
   <img 
-    src="assets/bt-5.jpg"
+    [src]=[gameCover]
     alt=""
   >
-  <app-card-label gameLabel="Digital"></app-card-label>
+  <app-card-label gameLabel={{gameLabel}}></app-card-label>
+  <app-card-pricing gamePrice={{gamePrice}} gameType={{gameType}}></app-card-pricing>
 </a>
