--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,8 @@
   margin: 0;
   border: 0;
   box-sizing: border-box;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif';
+  color: #ffffff;
+  font-family: "Segoe UI', Tahoma, Geneva, Verdana, sans-serif";
 }
 
 body {
