--- a/src/app/components/card/card-pricing/card-pricing.component.html
+++ b/src/app/components/card/card-pricing/card-pricing.component.html
@@ -1,1 +1,12 @@
-<p>card-pricing works!</p>
+<div class="card-pricing__container">
+  <div class="card-pricing__title">Play it now</div>
+  <div class="card-pricing__value">
+    <div class="card-pricing__value__console">
+      <span>|</span>
+      <p>{{gameType}}</p>
+    </div>
+    <div class="card-pricing__value__money">
+      <p class="game-price">{{gamePrice}}</p>
+    </div>
+  </div>
+</div>
