--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,9 +1,10 @@
 .home__container {
-  width: 90%;
+  width: 100%;
   height: 100vh;
-  margin: auto;
-  padding-top: 5rem;
   display: flex;
+  padding-bottom: 2rem;
+  padding-top: 5rem;
+  gap: 2rem;
 
   justify-content:  center;
   flex-wrap: wrap;
